--- a/www/templates/scripts.hbs
+++ b/www/templates/scripts.hbs
@@ -1,4 +1,4 @@
-<script src="./fancyndex/www/js/popper-1.12.5.js"></script>
-<script src="./fancyndex/www/js/jquery-3.2.1.js"></script>
-<script src="./fancyndex/www/js/bootstrap-4.0/bootstrap.js" ></script>
-<script src="./fancyndex/www/js/index.js"></script>
+<script src="fancyndex/www/js/popper-1.12.5.js"></script>
+<script src="fancyndex/www/js/jquery-3.2.1.js"></script>
+<script src="fancyndex/www/js/bootstrap-4.0/bootstrap.js" ></script>
+<!-- <script src="fancyndex/www/js/index.js"></script> -->
