serve static files OK

--- a/www/templates/header.hbs
+++ b/www/templates/header.hbs
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel="stylesheet" href="fancyndex/www/css/bootstrap-4.0/bootstrap.css">
-        <link rel="stylesheet" href="fancyndex/www/css/animate.css">
-        <link rel="stylesheet" href="fancyndex/www/css/index.css"/>
+        <link rel="stylesheet" type="text/css" href="fancyndex/www/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="fancyndex/www/css/animate.min.css">
+        <link rel="stylesheet" type="text/css" href="fancyndex/www/css/index.css"/>
     </head>
 </html>
