--- a/www/templates/index.hbs
+++ b/www/templates/index.hbs
@@ -1,8 +1,14 @@
 {{> header}}
+
+<body>
+
 {{#each vecf}}
 <h1>
     {{this.name}}
     {{this.number}}
 </h1>
 {{/each}}
+
 {{> scripts}}
+
+</body>
