--- a/www/templates/index.hbs
+++ b/www/templates/index.hbs
@@ -3,22 +3,18 @@
 <body>
 {{name}}
 
-{{#each directories}}
-<h1>
+{{#each this}}
+<p>
     {{this.name}}
-    {{this.size}}
+    {{this.ftape}}
     {{this.timestamp}}
     {{this.datetime}}
-</h1>
-{{/each}}
-
-{{#each files}}
-<h1>
-    {{this.name}}
     {{this.size}}
-    {{this.timestamp}}
-    {{this.datetime}}
-</h1>
+    {{this.hsize}}
+    {{this.unit}}
+    {{this.acro_unit}}
+    {{this.elements}}
+</p>
 {{/each}}
 
 {{> scripts}}
