Template parsing is OK

--- a/www/templates/header.hbs
+++ b/www/templates/header.hbs
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel="stylesheet" type="text/css" href="/_fancyndex/www/css/bootstrap.min.css">
+        <!--<link rel="stylesheet" type="text/css" href="/_fancyndex/www/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="/_fancyndex/www/css/animate.min.css">
-        <link rel="stylesheet" type="text/css" href="/_fancyndex/www/css/index.css"/>
+        <link rel="stylesheet" type="text/css" href="/_fancyndex/www/css/index.css"/> -->
     </head>
 </html>
