--- a/web/templates/scripts.hbs
+++ b/web/templates/scripts.hbs
@@ -1,1 +1,1 @@
-<script src="assethttp://localhost:8000/asset/css/bulma.min.css/js/index.js"></script>
+<script type="text/javascript" src="/asset/js/index.js"></script>
