--- a/web/templates/header.hbs
+++ b/web/templates/header.hbs
@@ -3,7 +3,10 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>/{{ this.name }}</title>
+
+        <link rel="shortcut icon" type="image/x-icon" href="/asset/favicon.ico">
+
         <link rel="stylesheet" type="text/css" href="/asset/css/bulma.min.css">
         <link rel="stylesheet" type="text/css" href="/asset/css/index.css">
     </head>
-</html>
