--- a/web/templates/index.hbs
+++ b/web/templates/index.hbs
@@ -4,7 +4,7 @@
 
 <div class="container">
 
-    <table class="table is-striped is-hoverable is-fullwidth">
+    <table class="table is-hoverable is-fullwidth">
         <thead>
             <tr>
                 <th>Type</th>
