--- a/web/templates/header.hbs
+++ b/web/templates/header.hbs
@@ -7,6 +7,7 @@
 
         <link rel="shortcut icon" type="image/x-icon" href="/asset/favicon.ico">
 
+        <link rel="stylesheet" type="text/css" href="/asset/font-awesome-4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="/asset/css/bulma.min.css">
         <link rel="stylesheet" type="text/css" href="/asset/css/index.css">
     </head>
