breadcumb to navigate throught path OK

--- a/web/templates/index.hbs
+++ b/web/templates/index.hbs
@@ -4,17 +4,10 @@
 
 <div class="container">
 
-    <!--
-    <nav class="breadcrumb is-medium" aria-label="breadcrumbs">
+    <nav class="breadcrumb is-large" aria-label="breadcrumbs">
         <ul>
-            {{#each compo}}
-            <li {{#if @last}} class="is-active" {{/if}}>
-                <a href="/{{this}}" {{#if @last}} aria-current="page" {{/if}} > {{this}}</a>
-            </li>
-            {{/each}}
         </ul>
     </nav>
--->
 
     <table class="table is-narrow is-hoverable is-fullwidth">
         <thead>
