--- a/web/templates/index.hbs
+++ b/web/templates/index.hbs
@@ -22,7 +22,7 @@
         <tbody>
 
             {{#each directories}}
-            <tr class="is-directory" id="dir_{{ @index }}">
+            <tr class="is-directory" id="dir_{{ @index }}" onclick="dir_click(this.id)">
                 <td class="type">DIR</td>
                 <td class="name">{{ this.name }}</td>
                 <td class="date">{{ this.datetime }}</td>
