User can select a sort method - web ui enhancement

--- a/web/css/index.css
+++ b/web/css/index.css
@@ -1,3 +1,11 @@
+/* Hide this two columns which contains only process information */
+.timestamp { display: none; }
+.byte-size { display: none; }
+
+.img-hidden {
+    display: none;
+}
+
 table:hover {
     cursor: pointer;
 }
