--- a/web/css/index.css
+++ b/web/css/index.css
@@ -1,10 +1,8 @@
 /* Hide this two columns which contains only process information */
 .timestamp { display: none; }
 .byte-size { display: none; }
-
-.img-hidden {
-    display: none;
-}
+.img-hidden { display: none; }
+.info-hidden { display: none; }
 
 table:hover {
     cursor: pointer;
